Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-16230

GridView contentX and contentY do not reset when changing flow

XMLWordPrintable

    • 55b02f0efdb0a116d090444be2bedb651386abe5

      If the gridView is scrolled in one direction (e.g. vertically while flow is LeftToRight), then the flow is changed, the change in contentY remains and is not reset to zero.
      The result is the gridView usually completely "disappears".

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            chham Christopher Ham (closed Nokia identity) (Inactive)
            chham Christopher Ham (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes