ContentX and ContentY reset on flow change

The gridView should be visible when the flow is changed, regardless
of the content position before the flow change.

Task-number: QTBUG-16230
Reviewed-by: Martin Jones